[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
bollard.workspace = true
anyhow.workspace = true
futures-util.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
